 ! Base: Fixed problems with board URLs containing quotes. (install.php, Subs-Board.php)
 + Base: Added the 'pretty_enable_filters' and 'pretty_filter_callbacks' settings. (install.php)
 + Base: Added the 'pretty_urls_cache' table. (install.php)
 + Base: Run the filter callbacks against all URLs in a page, caching any new urls. (QueryString.php)

Pretty URLs 0.4                                                   March 14, 2007
================================================================================
 ! Base: Now following the SMF Coding Guidelines (I hope).
 ! Base: It wasn't compatible with another mod, my own! (Oh the shame!) (PackageGet.php)
 + Base: Transliterate some Cyrillic characters. (Subs-PrettyUrls.php)
 % Removed the TP-ext-none package, and moved its changes to the ext-none package.
 ! ext-none: Added error="skip" attributes to many less essential changes so it will have a better chance of installing.
 ! Base: $context['pretty'] wasn't defined in SSI.php.
 + Base: If the database encoding isn't UTF-8 and multibyte string functions are available, try converting the text to UTF-8. (Subs-PrettyUrls.php)
 ! Base: Halved the number of queries used to synchronise the topic URLs. (Subs-PrettyUrls.php)
 + Base: Allow Arabic to be romanised. (QueryString.php, Subs-PrettyUrls.php, example.htaccess)
 % ext-none: Broke up Major.xml into 3 files because it was too big for the package manager.

Pretty URLs 0.3                                                 January 20, 2007
================================================================================
 + Base: Added some Turkish (and other) characters. (Subs-PrettyUrls.php)
 ! ext-none: Fixed some problems in SSI.php.
 + Base: Give new topics a pretty URL. (Subs-Post.php)
 + TP-ext-none: Change the URLs of the front page in TP_boardNews(). (TPortal.php)
 + ext-none: Change the URLs of Stats.php.
 + Added a Package List. (packages.xml)