@@ -1,0 +1,8 @@
+<?php
+//	Version: 0.5; PrettyUrls-Filters
+//	A file for filter extensions to be placed in
+
+if (!defined('SMF'))
+	die('Hacking attempt...');
+
+?>
