@@ -10,13 +10,14 @@
 
 <package-info xmlns="http://www.simplemachines.org/xml/package-info" xmlns:smf="http://www.simplemachines.org/">
 	<id>el:prettyurls</id>
-	<version>0.4</version>
+	<version>0.5</version>
 	<name>Pretty URLs - Base</name>
 	<type>modification</type>
 
 	<install for="1.1, 1.1.0-1.1.99">
 		<modification format="xml" type="file">Sources.xml</modification>
 		<modification format="xml" type="file">Languages.xml</modification>
+		<require-file name="PrettyUrls-Filters.php" destination="$sourcedir" />
 		<require-file name="Subs-PrettyUrls.php" destination="$sourcedir" />
 		<require-file name="example.htaccess" destination="$boarddir" />
 		<code type="file">install.php</code>
@@ -24,6 +25,7 @@
 	<uninstall for="1.1, 1.1.0-1.1.99">
 		<modification format="xml" type="file" reverse="true">Sources.xml</modification>
 		<modification format="xml" type="file" reverse="true">Languages.xml</modification>
+		<remove-file name="$sourcedir/PrettyUrls-Filters.php" />
 		<remove-file name="$sourcedir/Subs-PrettyUrls.php" />
 		<remove-file name="$boarddir/example.htaccess" />
 	</uninstall>
